# api/openapi.yaml
@@ -7,7 +7,7 @@ info:
     description: Agent服务定义（Kratos风格）
     version: 0.0.1
 paths:
-    /v1/agent-types:
+    /api/agent-types:
         get:
             tags:
                 - AgentService
@@ -26,7 +26,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/agents:
+    /api/agents:
         get:
             tags:
                 - AgentService
@@ -68,71 +68,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/agents/{agentId}:chat:
-        post:
-            tags:
-                - AgentService
-            description: 单次对话请求
-            operationId: AgentService_Chat
-            parameters:
-                - name: agentId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/ChatRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/ChatResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /v1/agents/{agentId}:streamChat:
-        post:
-            tags:
-                - AgentService
-            description: 流式对话请求
-            operationId: AgentService_StreamChat
-            parameters:
-                - name: agentId
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: int32
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/ChatRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/ChatStreamResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /v1/agents/{id}:
+    /api/agents/{id}:
         get:
             tags:
                 - AgentService
@@ -211,7 +147,57 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/mcp/services:
+    /api/chat:
+        post:
+            tags:
+                - AgentService
+            description: 单次对话请求
+            operationId: AgentService_Chat
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ChatRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ChatResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/chat/stream:
+        post:
+            tags:
+                - AgentService
+            description: 流式对话请求
+            operationId: AgentService_StreamChat
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ChatRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ChatStreamResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/mcp/services:
         get:
             tags:
                 - AgentService
@@ -253,7 +239,50 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/mcp/services/{name}:
+    /api/mcp/services-with-id:
+        get:
+            tags:
+                - AgentService
+            operationId: AgentService_ListMCPServicesWithId
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MCPServicesWithIdResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/mcp/services/{id}/tools:
+        get:
+            tags:
+                - AgentService
+            operationId: AgentService_GetMCPServiceTools
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MCPServiceToolsResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/mcp/services/{name}:
         delete:
             tags:
                 - AgentService
@@ -281,7 +310,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /v1/tools:
+    /api/tools:
         get:
             tags:
                 - AgentService
@@ -371,16 +400,16 @@ components:
         AgentConfigResponse:
             type: object
             properties:
-                success:
-                    type: boolean
-                message:
-                    type: string
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 agent:
                     $ref: '#/components/schemas/AgentConfig'
             description: Agent 配置响应
         AgentListResponse:
             type: object
             properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 agents:
                     type: array
                     items:
@@ -402,11 +431,23 @@ components:
         AgentTypesResponse:
             type: object
             properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 types:
                     type: array
                     items:
                         $ref: '#/components/schemas/AgentTypeInfo'
             description: Agent类型列表响应
+        BaseResponse:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                reason:
+                    type: string
         ChatRequest:
             type: object
             properties:
@@ -446,10 +487,8 @@ components:
                     type: string
                 metadata:
                     $ref: '#/components/schemas/ExecutionMetadata'
-                success:
-                    type: boolean
-                error:
-                    type: string
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
             description: 对话响应
         ChatStreamResponse:
             type: object
@@ -519,21 +558,71 @@ components:
         MCPServiceResponse:
             type: object
             properties:
-                success:
-                    type: boolean
-                message:
-                    type: string
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 service:
                     $ref: '#/components/schemas/MCPServiceInfo'
             description: MCP 服务响应
+        MCPServiceToolInfo:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                type:
+                    type: string
+                inputSchema:
+                    type: object
+        MCPServiceToolsResponse:
+            type: object
+            properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
+                tools:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MCPServiceToolInfo'
+        MCPServiceWithIdInfo:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int32
+                name:
+                    type: string
+                endpoint:
+                    type: string
+                active:
+                    type: boolean
+                toolCount:
+                    type: integer
+                    format: int32
+                description:
+                    type: string
+                createdAt:
+                    type: string
+                lastRefresh:
+                    type: string
         MCPServicesResponse:
             type: object
             properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 services:
                     type: array
                     items:
                         $ref: '#/components/schemas/MCPServiceInfo'
             description: MCP 服务列表响应
+        MCPServicesWithIdResponse:
+            type: object
+            properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
+                services:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MCPServiceWithIdInfo'
         Status:
             type: object
             properties:
@@ -565,6 +654,8 @@ components:
         ToolsResponse:
             type: object
             properties:
+                ret:
+                    $ref: '#/components/schemas/BaseResponse'
                 tools:
                     type: array
                     items:
